--- a/css/main.css
+++ b/css/main.css
@@ -70,18 +70,52 @@
     opacity: 0.4;
 }
 
-.letter-a {
+.letter-group1 {
     font-family: 'Philosopher', Arial, sans-serif;
     font-size: 23px;
     line-height: 25px;
     color: #000000;
 }
 
-.letter-a__position {
+.letter-group1__position {
     position: absolute;
     top: 35px;
     left: 35px;      
     /*margin-left: 35px;*/
+}
+
+.letter-group2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 60px;
+    line-height: 35px;
+
+    color: #ffffff;
+    text-shadow: 2px 2px 0px black, 
+                -2px -2px 0px black, 
+                -2px 2px 0px black, 
+                2px -2px 0px black;
+}
+
+.letter-group2__a,
+.letter-group2__f,
+.letter-group2__g {
+    position: absolute;
+}
+
+.letter-group2__a {
+    top: 60px;
+    right: 400px;
+}
+
+.letter-group2__f {
+    top: 160px;
+    right: 235px;
+}
+
+.letter-group2__g {
+    top: 100px;
+    right: 250px;
+    color: #f7e611;
 }
 
 .wrapper {
@@ -129,13 +163,15 @@
 .layer-picture1 {    
     max-width: 800px;
     max-height: 525px; 
-    background-color: rgba(247, 230, 17, 1);   
+    background-color: rgba(247, 230, 17, 1); 
+    overflow: hidden;  
+    margin-bottom: 60px;
 }
 
 .picture1 {
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.1;
 }
 /*
 .layer-picture1::after {
@@ -160,7 +196,7 @@
 .picture2 {
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.1;
 }
 
 .layer-picture2::before {
@@ -176,6 +212,65 @@
 
     opacity: 0.5;
     transform: rotate(-90deg);    
+}
+
+.slider {
+    margin: 0;
+    padding: 0;
+    width: 214px;
+    height: 383px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+
+    position: absolute;
+    top: 130px;
+    right: 158px;    
+}
+
+.slider__background {
+    width: 138px;
+    height: 100%;
+    background-color: #f7e611;
+
+    position: relative;
+}
+
+.slider__link {
+    opacity: 0.4;
+    margin-bottom: 120px;
+}
+
+.slider__number {
+    font-family: 'geometriaheavy_italic', Arial, sans-serif;
+}
+
+.top-number {
+    font-size: 45px;
+    line-height: 54px;
+    color: #000000;
+
+    position: absolute;
+    left: 23px;
+    bottom: 41px;
+}
+
+.bottom-number {
+    font-size: 17px;
+    line-height: 20.5px;
+    color: #000000;
+
+    position: absolute;
+    left: 77px;
+    bottom: 23px;
+}
+
+.bottom-number::before {
+    content: '';
+    position: absolute;   
+    bottom: 36px;
+    width: 17px;
+    border-top: 3px solid #000000;    
 }
 
 .region {
@@ -225,4 +320,26 @@
     transform: rotate(-90deg);
     transform-origin: left top 0;
     opacity: 0.5;
+}
+
+.wrapper-letters {
+    display: flex;
+    justify-content: space-between;
+}
+
+.middle-icon {
+    position: relative;
+    width: 212px;
+    height: 10px;
+    background-color: #f7e611;
+}
+
+.middle-icon::before {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    width: 212px;
+    height: 112px;
+    background-image: url('../img/ring.png');
+    background-repeat: no-repeat;
 }
