--- a/css/main.css
+++ b/css/main.css
@@ -93,14 +93,16 @@
 
 .letter-group2 {
     font-family: 'geometriaregular', Arial, sans-serif;
-    font-size: 75px;
-    line-height: 75px;
-
-    color: #ffffff;
+    font-size: 81px;
+    line-height: 81px;
+    -webkit-text-stroke: 2px #000000;
+    color: transparent;
+    /*
     text-shadow: 1px 1px 0px black, 
                 -1px -1px 0px black, 
                 -1px 1px 0px black, 
                 1px -1px 0px black;
+    */
 }
 
 .letter-group2__a,
@@ -110,19 +112,18 @@
 }
 
 .letter-group2__a {
-    top: 52px;
-    right: 401px;
+    top: 49px;
+    right: 398px;
 }
 
 .letter-group2__f {
-    top: 134px;
-    right: 237px;
+    top: 132px;
+    right: 236px;
 }
 
 .letter-group2__g {
     top: 115px;
-    right: 235px;
-    color: #f7e611;
+    right: 232px;
 }
 
 .wrapper {
