Исправлена буква в группе2 с F на E

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@
 }
 
 .letter-group2__a,
-.letter-group2__f,
+.letter-group2__e,
 .letter-group2__g {
     position: absolute;
 }
@@ -116,7 +116,7 @@
     right: 398px;
 }
 
-.letter-group2__f {
+.letter-group2__e {
     top: 132px;
     right: 236px;
 }
